--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "zimbot-v4",
+  "name": "📍TIKKA BOT📍",
   "version": "4.0.1",
   "description": "Multi device wa bot created by Zim Bot Inc.",
   "main": "index.js",
