--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "📍TIKKA BOT📍",
   "version": "4.0.1",
-  "description": "Multi device wa bot created by Zim Bot Inc.",
+  "description": "Multi device wa bot created by 📍TIKKA BOT📍.",
   "main": "index.js",
   "type": "commonjs",
   "scripts": {
